--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,21 @@ header {
   max-height: 500px;
   overflow: hidden;
 }
+
+@media only screen and (min-width: 60em) {
+
+  .textcontainer {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(73, 85, 98, .9));
+    background-size: cover;
+    position: absolute;
+  }
+
+  .rel {
+    position: relative;
+  }
+
+  .btn-ghost {
+    border-color: #fff;
+  }
+
+}
