--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,10 @@ header {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(73, 85, 98, .9));
     background-size: cover;
     position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
   }
 
   .rel {
